Update README.md
Updated README to enhance project overview and structure.